# w55mh32x_vscode_basic

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  LICENSE  README.md  startup_w55mh32.s  w55mh32x_flash.ld
cmake/: gcc-arm-none-eabi.cmake
cmake/w55mh32/: CMakeLists.txt
core/inc/: main.h  system_w55mh32.h  w55mh32_conf.h  w55mh32_it.h
core/src/: interrupt_vector_table.c  main.c  syscalls.c  sysmem.c  system_w55mh32.c  w55mh32_it.c  w55mh32_msp.c
docs/design/: task9-architecture.md
drivers/CMSIS/Device/WIZnet/W55MH32X/flash/: W55MH32.FLM
drivers/CMSIS/Device/WIZnet/W55MH32X/inc/: core_cm3.h
drivers/CMSIS/Device/WIZnet/W55MH32X/pack/: WIZnet.W55MH32_DFP.1.0.0.pack
drivers/CMSIS/Device/WIZnet/W55MH32X/svd/: W55MH32.svd
drivers/W55MH32X_Driver/inc/: misc.h  w55mh32.h  w55mh32_adc.h  w55mh32_bkp.h  w55mh32_can.h  w55mh32_cec.h  w55mh32_crc.h  w55mh32_dac.h  w55mh32_dbgmcu.h  w55mh32_dma.h  w55mh32_exti.h  w55mh32_flash.h  w55mh32_gpio.h  w55mh32_i2c.h  w55mh32_iwdg.h  w55mh32_otp.h  w55mh32_pwr.h  w55mh32_rcc.h  w55mh32_rtc.h  w55mh32_sdio.h  w55mh32_spi.h  w55mh32_tim.h  w55mh32_trng.h  w55mh32_usart.h  w55mh32_wwdg.h  w55mh32_wztoe.h
drivers/W55MH32X_Driver/inc/cryptlib/: wiz_aes.h  wiz_bignum.h  wiz_crypt.h  wiz_crypt_version.h  wiz_des.h  wiz_misc.h  wiz_rand.h  wiz_sha.h  wiz_sm1.h  wiz_sm3.h  wiz_sm4.h  wiz_sm7.h
drivers/W55MH32X_Driver/lib/: w55mh32.lib  w55mh32_toe.lib  wiz.h  wiz_crypt.lib
drivers/W55MH32X_Driver/src/: misc.c  system_w55mh32.c  w55mh32_adc.c  w55mh32_bkp.c  w55mh32_can.c  w55mh32_crc.c  w55mh32_dac.c  w55mh32_dbgmcu.c  w55mh32_dma.c  w55mh32_exti.c  w55mh32_flash.c  w55mh32_gpio.c  w55mh32_i2c.c  w55mh32_iwdg.c  w55mh32_otp.c  w55mh32_pwr.c  w55mh32_rcc.c  w55mh32_rtc.c  w55mh32_sdio.c  w55mh32_spi.c  w55mh32_tim.c  w55mh32_trng.c  w55mh32_usart.c  w55mh32_wwdg.c
